fixed post text overflowing

--- a/public/css/dark-style.css
+++ b/public/css/dark-style.css
@@ -93,6 +93,7 @@ hr {
 
 .post-general {
 	flex-wrap: wrap;
+	max-width: 300px;
 }
 
 .post-thread {
@@ -102,7 +103,11 @@ hr {
 
 .post-subtitle {
 	font-size: 12px;
-	line-height: 0.5;
+	overflow: hidden;
+   	text-overflow: ellipsis;
+   	display: -webkit-box;
+   	-webkit-line-clamp: 2; /* number of lines to show */
+   	-webkit-box-orient: vertical;
 }
 
 .post-zoom {
