--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,7 @@ a:hover {
 
 .post-general {
 	flex-wrap: wrap;
+	max-width: 300px;
 }
 
 .post-thread {
@@ -86,7 +87,11 @@ a:hover {
 
 .post-subtitle {
 	font-size: 12px;
-	line-height: 0.5;
+	overflow: hidden;
+   	text-overflow: ellipsis;
+   	display: -webkit-box;
+   	-webkit-line-clamp: 2; /* number of lines to show */
+   	-webkit-box-orient: vertical;
 }
 
 .post-zoom {
